# sherpa

./: .gitignore  README.md  pyproject.toml
src/sherpa/: sherpa.py
